# alphasignpy

./: .gitignore  NOTICE  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
alphasign/: __init__.py  exceptions.py  image.py  packet.py  protocol.py  sign.py  sign_types.py  singleton.py  text_format.py
alphasign/command/: __init__.py  write_small_dots.py  write_special_functions.py  write_text.py
alphasign/commands/: __init__.py  base.py  bulletin.py  dots.py  special.py  string_file.py  text.py
docs/: examples.md  getting-started.md  index.md  protocol-reference.md
docs/api/: commands.md  exceptions.md  image.md  protocol.md  sign.md  text-formatting.md
examples/: ack_nak_error_handling.py  clock.py  hello_world.py  image_display.py  multi_file_slideshow.py  special_functions.py  string_variables.py  text_formatting.py
tests/: conftest.py  test_image.py  test_packet.py  test_sign.py  test_text_format.py
tests/commands/: test_bulletin.py  test_dots.py  test_special.py  test_string_file.py  test_text.py
